--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "postcss": "^8.4.14"
   },
   "engines": {
-    "node": "^20 || ^18 || ^16",
+    "node": "^20 || ^18",
     "npm": ">= 6.13.4",
     "yarn": ">= 1.21.1"
   }
