--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           # This is how you access the exposed version
-          automatic_release_tag: "dafault"
+          automatic_release_tag: "release"
           title: "Deploy"
           files: |
             backend.tar.gz
