--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "futuree",
-  "version": "1.0.1",
+  "name": "future",
+  "version": "1.0.0",
   "description": "A Quasar Project",
   "productName": "Quasar App",
   "author": "leandro.acosta292@hotmail.com <leandro.acosta292@hotmail.com>",
