--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "future",
+  "name": "future 1",
   "version": "1.0.1",
   "description": "A Quasar Project",
   "productName": "Quasar App",
