--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,18 +1,49 @@
-changelog:
-  exclude:
-    labels:
-      - ignore-for-release
-    authors:
-      - octocat
-  categories:
-    - title: Breaking Changes 🛠
-      labels:
-        - Semver-Major
-        - breaking-change
-    - title: Exciting New Features 🎉
-      labels:
-        - Semver-Minor
-        - enhancement
-    - title: Other Changes
-      labels:
-        - "*"
+name: Publish Release on Changes
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  publish_release:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Determine Version
+        id: version
+        run: |
+          echo ::set-output name=current_tag::$(git describe --abbrev=0 --tags)
+          echo ::set-output name=commit_messages::$(git --no-pager log --pretty=format:"%s" origin/main..HEAD)
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ steps.version.outputs.current_tag }}
+          release_name: Release ${{ steps.version.outputs.current_tag }}
+          body: ${{ steps.version.outputs.commit_messages }}
+
+      - name: Publish Release
+        id: publish_release
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./path/to/release/asset.zip
+          asset_name: release-asset.zip
+          asset_content_type: application/zip
