--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,14 +27,18 @@ jobs:
           echo ::set-output name=current_tag::$(git describe --abbrev=0 --tags)
           echo ::set-output name=commit_messages::$(git --no-pager log --pretty=format:"%s" origin/main..HEAD)
 
+      - name: Generate Tag Name
+        id: generate_tag_name
+        run: echo ::set-output name=tag_name::"v$(date +'%Y%m%d%H%M%S')"
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.version.outputs.current_tag }}
-          release_name: Release ${{ steps.version.outputs.current_tag }}
+          tag_name: ${{ steps.generate_tag_name.outputs.tag_name }}
+          release_name: Release ${{ steps.generate_tag_name.outputs.tag_name }}
           body: ${{ steps.version.outputs.commit_messages }}
 
       - name: Publish Release
@@ -44,6 +48,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./path/to/release/asset.zip
+          asset_path: ./release-asset.zip
           asset_name: release-asset.zip
           asset_content_type: application/zip
