--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.ACTIONS }}
         with:
           tag_name: ${{ steps.generate_tag_name.outputs.tag_name }}
           release_name: Release ${{ steps.generate_tag_name.outputs.tag_name }}
