--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,53 +1,30 @@
-name: Publish Release on Changes
+name: release
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
-  publish_release:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      
+      # This is how you use the ga-project-version action
+      - name: Get version of the project
+        id: project-version
+        uses: 'euberdeveloper/ga-project-version@main'
         with:
-          node-version: '14'
+          package-manager: 'composer'
 
-      - name: Install Dependencies
-        run: npm install
-
-      - name: Determine Version
-        id: version
-        run: |
-          echo ::set-output name=current_tag::$(git describe --abbrev=0 --tags)
-          echo ::set-output name=commit_messages::$(git --no-pager log --pretty=format:"%s" origin/main..HEAD)
-
-      - name: Generate Tag Name
-        id: generate_tag_name
-        run: echo ::set-output name=tag_name::"v$(date +'%Y%m%d%H%M%S')"
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.ACTIONS }}
+      # In this step the exposed version is used as tag of a github release to publish
+      - name: Add release
+        uses: "marvinpinto/action-automatic-releases@latest"
         with:
-          tag_name: ${{ steps.generate_tag_name.outputs.tag_name }}
-          release_name: Release ${{ steps.generate_tag_name.outputs.tag_name }}
-          body: ${{ steps.version.outputs.commit_messages }}
-
-      - name: Publish Release
-        id: publish_release
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN_GA }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./release-asset.zip
-          asset_name: release-asset.zip
-          asset_content_type: application/zip
+          repo_token: "${{ secrets.ACTIONS }}"
+          # This is how you access the exposed version
+          automatic_release_tag: "${{ steps.project-version.outputs.version }}"
+          title: "Deploy"
+          files: |
+            backend.tar.gz
