--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,6 @@ jobs:
         with:
           repo_token: "${{ secrets.ACTIONS }}"
           # This is how you access the exposed version
-          tag: "${{ steps.project-version.outputs.version }}"
+          automatic_release_tag: "${{ steps.project-version.outputs.version }}"
+          prerelease: 'false'
           title: "${{ steps.project-version.outputs.version }}"
-          files: |
-            backend.tar.gz
