--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,13 +10,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      
+
       # This is how you use the ga-project-version action
       - name: Get version of the project
         id: project-version
         uses: 'euberdeveloper/ga-project-version@main'
         with:
-          package-manager: 'npm'
+          package-manager: 'poetry'
 
       # In this step the exposed version is used as tag of a github release to publish
       - name: Add release
